[package]
name = "dioxus-retrouter"
version = "0.4.0"
edition = "2018"
description = "Cross-platform router for Dioxus apps (0.3 dioxus router style)"
license = "MIT/Apache-2.0"
repository = "https://github.com/mrxiaozhuox/dioxus-retrouter/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.3" }
futures-channel = "0.3.29"
url = { version = "2.5.0", default-features = false }

# for wasm
web-sys = { version = "0.3", features = [
    "Attr",
    "Document",
    "History",
    "HtmlBaseElement",
    "Event",
    "NamedNodeMap",
    "Url",
    "UrlSearchParams",
    "Window",
    "Location",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
gloo-events = { version = "0.2.0", optional = true }
log = "0.4.14"
thiserror = "1.0.30"
futures-util = "0.3.21"
serde = { version = "1", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
simple_logger = "4.0.0"

[features]
default = ["query"]
web = ["web-sys", "gloo-events", "js-sys", "wasm-bindgen"]
query = ["serde", "serde_urlencoded"]
wasm_test = []

[dev-dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.14"
wasm-logger = "0.2.0"
wasm-bindgen-test = "0.3"
gloo-utils = "0.2.0"
dioxus-web = { version = "0.4.3" }
# dioxus-desktop = { path = "../desktop", optional = true }

# not wasm

[target.wasm32-unknown-unknown.dev-dependencies]
dioxus-router = { path = ".", features = ["web"] }

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document"]
